CMRARC-426 fixed landing page header from wrapping and added rounded borders with a bit of margin for records page. finally moved common/base.scss before the pages css.

--- a/app/assets/stylesheets/pages/_landing-page.scss
+++ b/app/assets/stylesheets/pages/_landing-page.scss
@@ -8,6 +8,10 @@ header.landingpage-header {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.15)
 }
 
+header.landingpage-header h1 {
+  white-space: nowrap;
+}
+
 header.landingpage-header::after {
   clear: both;
   content: "";
